--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -49,11 +49,11 @@ html[xmlns] .slides {display: block;}
 
 /* Direction Nav */
 .flex-direction-nav {*height: 0;}
-.flex-direction-nav a {width: 30px; height: 60px; margin: -20px 0 0; display: block; background: url(../images/bg_direction_nav.png) no-repeat 0 0; position: absolute; top: 50%; z-index: 10; cursor: pointer; text-indent: -9999px;  -webkit-transition: all .3s ease;}
+.flex-direction-nav a {width: 26px; height: 26px;border-radius: 100%; margin: -20px 0 0; display: block; background: url(../images/bg_direction_nav.png) no-repeat 0 0; position: absolute; top: 50%; z-index: 10; cursor: pointer; text-indent: -9999px;  -webkit-transition: all .3s ease;background-color: #BEBDBD;}
 .flex-direction-nav .flex-next {background-position: 100% 0; right: -36px; }
 .flex-direction-nav .flex-prev {left: -36px;}
-.flexslider:hover .flex-next {opacity: 0.8; }
-.flexslider:hover .flex-prev {opacity: 0.8; }
+.flex-next:hover {background-color: #FF7D05; }
+.flex-prev:hover{background-color: #FF7D05; }
 .flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover {opacity: 1;}
 .flex-direction-nav .flex-disabled {opacity: .3!important; filter:alpha(opacity=30); cursor: default;}
 
