--- a/css/style.css
+++ b/css/style.css
@@ -313,10 +313,13 @@ border-radius:10px;
 padding:10px 0px;
 margin: 20px 10px 20px 0px;
 min-height: 180px;
-width: 184px;
+width: 234px;
 display: inline-block;
 vertical-align: top;
 border-radius:10px;
+}
+.direct .item{
+	width: 315px;
 }
 .grid-12 .item a {
 text-decoration: none;
@@ -327,7 +330,7 @@ text-decoration: none;
 .item .image {
 /* float: left; */
 overflow: hidden;
-width: 140px;
+width: 70%;
 /* margin-right: 20px; */
 margin: 0 auto;
 text-align: center;
@@ -335,7 +338,7 @@ text-align: center;
 .item .desc{
 	color:#444;
 	border-right: 1px solid #FDD7B4;
-	min-height: 180px;
+	min-height: 125px;
 }
 .item  h3{
 	font-size:14px;
