--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ More Info: https://github.com/paulirish/html5-boilerplate/blob/362d0b7/css/style
 html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;overflow-y:scroll}
 a:link{-webkit-tap-highlight-color:#0250b4}
 a:hover,a:active{outline:none}
-a,a:active,a:visited{}
+a{color:#0250b4}
 a:hover{color: #FF7D05;}
 ul,ol{margin-left:2em}
 ol{list-style-type:decimal}
