--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.map{background:url('images/map.png')no-repeat center center;width:100%;min-height:540px;position:relative;
+.map{background:url('images/map.png')no-repeat center center;width:1247px;min-height:540px;position:relative;
 		
 	}
 	.user{position:absolute;width:60px;height:60px;cursor:pointer;}
