--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,7 @@ line-height:33px;
 	text-decoration:none;
 	border: 1px solid transparent;
 padding: 5px 10px;
+
 }
 .menu ul.nav li a:hover{
 	border:1px solid #FF7D05;
@@ -232,14 +233,18 @@ padding: 5px 10px;
 }
 .menu ul.nav li.dropdown{
 	position:relative;
-	z-index:5;
+	/*z-index:5;*/
+}
+.menu ul.nav li.dropdown a{
+	position: relative;
+z-index: 2;
+
 }
 .menu ul.nav li.dropdown .submenu{
 	position:absolute;
 	display:none;
 	background:#fff;
 	box-shadow:0px 0px 10px rgba(0,0,0,0.5);
-	z-index:-1;
 	padding: 58px 25px 15px 25px;
 	top:0px;
 	left:0px;
@@ -323,6 +328,7 @@ border:2px solid transparent;
 margin: 20px 10px 20px 0px;
 border-radius:10px;
 box-sizing:border-box;
+vertical-align: top;
 }
 .grid-12 .item{
 
